tests/idris2/error007/expected
1/1: Building CongErr (CongErr.idr)
Error: While processing right hand side of fsprf. Can't solve constraint between: ?_ x and FS x.

CongErr.idr:4:11--4:19
 1 | import Data.Fin
 2 | 
 3 | fsprf : x === y -> Fin.FS x = FS y
 4 | fsprf p = cong _ p
               ^^^^^^^^

